# Grafika

./: CMakeLists.txt  README.md  makefile  notes.txt
Include/: callbacks.h  camera.h  constants.h  draw.h  game.h  helpmenu.h  light.h  model.h  texture.h
Model/: planet
Source/: callbacks.c  camera.c  draw.c  game.c  helpmenu.c  light.c  main.c  model.c  texture.c
